packages/svelte/tests/compiler-errors/samples/invalid-rune-name/main.svelte.js
export const x = () => $effect.imnotarune();
